--- a/FGM/Views/Shared/_Layout.cshtml
+++ b/FGM/Views/Shared/_Layout.cshtml
@@ -314,6 +314,12 @@
                                         <p>လောင်းကြေးများ ဖြည့်သွင်းရန်</p>
                                     </a>
                                 </li>
+                                <li class="nav-item">
+                                    <a href="@Url.Action("UserOddsEntry","Match")" class="nav-link">
+                                        <i class="far fa-check-circle nav-icon text-info"></i>
+                                        <p>လောင်းရန်</p>
+                                    </a>
+                                </li>
                             </ul>
                         </li>
                         <li class="nav-item has-treeview">
