--- a/FGM/Views/Shared/_Layout.cshtml
+++ b/FGM/Views/Shared/_Layout.cshtml
@@ -211,7 +211,7 @@
                 <nav class="mt-2">
                     <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
                         <!-- Add icons to the links using the .nav-icon class
-        with font-awesome or any other icon font library -->
+    with font-awesome or any other icon font library -->
                         <li class="nav-header">ရုပ်ရှင်</li>
                         <li class="nav-item has-treeview">
                             <a href="#" class="nav-link">
@@ -338,7 +338,15 @@
                                     </a>
                                 </li>
                             </ul>
-                        </li>
+                            <ul class="nav nav-treeview">
+                                <li class="nav-item">
+                                    <a href="@Url.Action("UserTransitionEntry","UserBalance")" class="nav-link">
+                                        <i class="far fa-check-circle nav-icon text-info"></i>
+                                        <p>UserTransitionစာရင်း</p>
+                                    </a>
+                                </li>
+                            </ul>
+                        </li>                        
                     </ul>
                 </nav>
                 <!-- /.sidebar-menu -->
