--- a/FGM/Views/UserBalance/UserTransitionEntry.cshtml
+++ b/FGM/Views/UserBalance/UserTransitionEntry.cshtml
@@ -36,16 +36,24 @@
                         <div class="input-group-prepend">
                             <span class="input-group-text text-custom2" id="basic-addon1"><i class="fa fa-calendar-alt"></i></span>
                         </div>
-                        <input readonly="readonly" type="text" class="form-control float-right" id="TransDate" onchange="DateChange();">
+                        <input readonly="readonly" type="text" class="form-control float-right" id="TransDate" >
                     </div>
                 </div>
             </div>
-        </div>
-    </div>
-    <div id="UserList">
-    </div>
-    <div class="card">
-        <div class="card-body">
+            <div class="card" id="card4">
+                <div class="card-header bg-cyan">
+                    <h3 class="card-title">UserName</h3>
+                    <div class="card-tools">
+                        <button type="button" class="btn btn-tool" data-card-widget="collapse" data-toggle="tooltip" title="Collapse">
+                            <i class="fas fa-minus"></i>
+                        </button>
+                    </div>
+                </div>
+                <div class="card-body">
+                    <div id="UserList" class="row">
+                    </div>
+                </div>
+            </div>
             <div class="form-row">
                 <div class="form-group col-xl-2 col-md-3">
                     <label for="TransDate">Transition Type:</label>
@@ -53,7 +61,7 @@
                         <div class="input-group-prepend">
                             <span class="input-group-text text-custom2" id="basic-addon1"><i class="fa fa-calendar-alt"></i></span>
                         </div>
-                        @Html.DropDownList("ddlWeekly", new List<SelectListItem>
+                        @Html.DropDownList("ddlTranType", new List<SelectListItem>
                      {
                          new SelectListItem{ Text="---Select---", Value = "" },
                          new SelectListItem{ Text="Input", Value = "1" },
@@ -69,7 +77,7 @@
             </div>
             <div class="form-row">
                 <div class="form-group col-xl-2 col-md-3">
-                    <label for="TransDate">Balance:</label>
+                    <label for="Balance">Balance:</label>
                     <div class="input-group">
                         <div class="input-group-prepend">
                             <span class="input-group-text text-custom2" id="basic-addon1"><i class="fa fa-calendar-alt"></i></span>
@@ -85,7 +93,7 @@
             </div>
         </div>
     </div>
-    <input id="tdPlace" type="hidden" value="1" />
+    @*<input id="tdPlace" type="hidden" value="1" />*@
 </section>
 
 @section Scripts{
@@ -110,7 +118,6 @@
                 $(this).removeClass('btn-danger');
                 $(this).addClass('btn-default')
             });
-
         }
 
           function GetUser() {
@@ -120,12 +127,48 @@
                 dataType: "JSON",
                 dataSrc: '',
                  success: function (res) {
-                     CreateCardByUser(res);
+                     BindUser(res);
                  }
              })
         }      
 
+        function BindUser(res) {
+            var val = $("#LoginUserID").val();
+            var cl = $("#UserList");
+            cl.empty();
+            var e = '';
+            for (var i = 0; i < res.length; i++) {
+                e = e + '<button type="button" id="btn' + res[i].UserID + '" onclick="BtnUser(this,' + res[i].UserID + ')" class="btn btn-default col-md-3 col-xl-2 mb-1">'
+                    + res[i].UserName +
+                    '</button>'
+            }
+
+            cl.append(e);
+
+            $("#btn" + val).removeClass("btn-default");
+            $("#btn" + val).addClass("btn-danger");
+        }
+
+        function BtnUser(btn, UserID) {
+            alert('w');
+            if (!$(btn).hasClass('btn-danger')) {
+                alert('a');
+                $(btn).removeClass('btn-default');
+                $(btn).addClass('btn-danger')
+            }
+            else {
+                alert('b');
+            }
+        }
+
+        function Save() {
+            var ID = $("#TransDate").val() + '/' + $("#ddlTranType").val() + '/' + $("#Balance").val();
+            alert(ID);
+        }
+
+
         function CreateCardByUser(res) {
+            var val = $("#LoginUserID").val();
             var ul = $("#UserList");
             ul.empty();
             var e = '';
@@ -148,66 +191,13 @@
                             '</div>';
                     }
                     e = e +
-                        //'<div class="card-body">' +
-                        //'<div class="row mb-1"><b>' + 'UserName'+ '</b></div>' +
                         '<button type="button" id="btn' + res[i].UserID + '" onclick="Add(this,' + res[i].UserID + ')" class="btn btn-default col-md-3 col-xl-2 mb-1">' +
                         res[i].UserName +
                         '</button>'
                 }
-                //UserID = res[i].UserID;
-                //countryID = res[i].CountryID;
             }
             ul.append(e);
         }
 
-        function Add(btn, userid) {
-            if (!$(btn).hasClass('btn-danger')) {
-                $(btn).removeClass('btn-default');
-                $(btn).addClass('btn-danger')
-                if ($("#tdPlace").val() == 1) {
-                    var trow = '<tr><td>'
-                        + '<div class="input-group date" id="timepicker' + userid + '" data-target-input="nearest">'
-                        + '<input type="text" id="ShowTime' + userid + '" class="form-control datetimepicker-input" data-target="#timepicker' + userid + '" />'
-                        + '<div class="input-group-append" data-target="#timepicker' + userid + '" data-toggle="datetimepicker">'
-                        + '<div class="input-group-text"><i class="far fa-clock"></i></div>'
-                        + '</div>'
-                        + '</div>'
-                        + '</td><td style="display: none">' + userid + '</td><td>' + $(btn).text()
-                        + '</td><td style="display: none"></td><td></td><td><button type="button" id="btnDelete" onclick="Delete(this);" class="btn btn-block btn-danger">ဖျက်မည်</button></td></tr>';
-                    var tableBody = $("#tblUser tbody");
-                    tableBody.append(trow);
-
-                    $("#tdPlace").val(2);
-
-                    $('#timepicker' + teamid).datetimepicker({
-                        format: 'LT'
-                    })
-                }
-                else {
-                    $('#tblUser tr:last td:nth-child(4)').html(teamid);
-                    $('#tblUser tr:last td:nth-child(5)').html($(btn).text());
-
-                    $("#tdPlace").val(1);
-                }
-            }
-        }
-        function Delete(btn) {
-            var trow = $(btn).closest('tr');
-            var btn1 = "#btn" + trow.find('td:eq(1)').html();
-            if (trow.find('td:eq(1)').html()) {
-                $(btn1).removeClass('btn-danger');
-                $(btn1).addClass('btn-default');
-            }
-
-            var btn2 = "#btn" + trow.find('td:eq(3)').html();
-            if (trow.find('td:eq(3)').html()) {
-                $(btn2).removeClass('btn-danger');
-                $(btn2).addClass('btn-default');
-            }
-
-            $(btn).closest('tr').remove();
-
-            $("#tdPlace").val(1);
-        }
         </script>
 }
